--- a/css/sp/index_sp.css
+++ b/css/sp/index_sp.css
@@ -1,5 +1,4 @@
 @charset "utf-8";
-/* CSS Document */
 
 #contents {
   z-index: 0;
@@ -12,26 +11,28 @@
 #modal-open {
   color: #cc0000;
 }
+
 /* モーダル コンテンツエリア */
 #modal-main {
   display: none;
-  width: 500px;
+  z-index: 3;
+  width: 93%;
   height: 300px;
   margin: 0;
   padding: 0;
+  position:fixed;
   background-color: #ffffff;
   color: #666666;
-  position:fixed;
-  z-index: 2;
 }
+
 /* モーダル 背景エリア */
 #modal-bg {
   display:none;
   width:100%;
-  height:100%;
-  background-color: rgba(0,0,0,0.5);
+  height:130%;
+  background-color:rgba(0,0,0, 0.50);
   position:fixed;
   top:0;
   left:0;
-  z-index: 1;
+  z-index: 2;
 }
