--- a/css/pc/index.css
+++ b/css/pc/index.css
@@ -13,25 +13,27 @@
   color: #cc0000;
 }
 /* モーダル コンテンツエリア */
-#modal-main {
-  display: none;
-  width: 500px;
+#modal-content {
+	display: none;
+	z-index: 2;
+	width: 500px;
   height: 300px;
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
+	position:fixed;
   background-color: #ffffff;
   color: #666666;
-  position:fixed;
-  z-index: 2;
 }
 /* モーダル 背景エリア */
-#modal-bg {
-  display:none;
-  width:100%;
-  height:100%;
-  background-color: rgba(0,0,0,0.5);
-  position:fixed;
-  top:0;
-  left:0;
-  z-index: 1;
+#modal-overlay {
+	z-index: 1;
+	display:none;
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	background-color: #000000;
+	opacity: 0.50;
+	filter:alpha(opacity=50);
 }
